--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-modal": "^3.1.11",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
